# fj49-python-rust-compare

./: Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cicd.yml
python/: benchmark.py  requirements.txt  script.py
rust/: Cargo.toml  benchmark.rs  main.rs
sorc/: main.py
