[package]
name = "Comparing-python-and-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.0"   # A CSV library for Rust
serde = { version = "1.0", features = ["derive"] }  # A serialization/deserialization library
psutil = "3.2.0"
sysinfo = "0.17.0"


[[bin]]
name = "main"
path = "main.rs"

[[bin]]
name = "benchmark"
path = "benchmark.rs"